added collectibles and civians to stats

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,9 +45,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\My Scripts\AdvancedTextRendering.cs" />
      <Compile Include="Assets\My Scripts\BaseCharacter.cs" />
      <Compile Include="Assets\My Scripts\GameController.cs" />
      <Compile Include="Assets\My Scripts\ObjectDestroyer.cs" />
+     <Compile Include="Assets\My Scripts\OlaController.cs" />
      <Compile Include="Assets\My Scripts\PlayerController.cs" />
      <Compile Include="Assets\My Scripts\ScrollBackground.cs" />
      <Compile Include="Assets\My Scripts\SinMovement.cs" />
