--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\My Scripts\OlaController.cs" />
      <Compile Include="Assets\My Scripts\PlayerController.cs" />
      <Compile Include="Assets\My Scripts\ScrollBackground.cs" />
+     <Compile Include="Assets\My Scripts\ShakeCamera.cs" />
      <Compile Include="Assets\My Scripts\SinMovement.cs" />
      <Compile Include="Assets\My Scripts\SpawnObjects.cs" />
      <Compile Include="Assets\My Scripts\TransportarObjetos.cs" />
